JPT Background positon of featured image

--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -208,6 +208,7 @@
     height:             400px;
     color:              $col-white;
     background-size:    cover;
+    background-position: center;
     position:           relative;
 
     .story-text {
