--- a/spe_custom_agenda/templates/cms_plugins/agenda.html
+++ b/spe_custom_agenda/templates/cms_plugins/agenda.html
@@ -57,44 +57,45 @@
                 </thead>
                 <tbody>
 
-                {% for item in items %}
-                    {% if item.is_new_day %}
+                {% regroup items by start_date as grouped %}
+                {% for group in grouped %}
+                    {% for item in group.list %}
                         <tr>
-                            <td class="agenda-date" class="active" rowspan="{{ item.rowspan }}">
-                                <div class="dayofmonth">{{ item.start_date | date:"d" }}</div>
-                                <div class="dayofweek">{{ item.start_date | date:"l" }}</div>
-                                <div class="shortdate text-muted">{{ item.start_date | date:"F" }}, {{ item.start_date | date:"Y" }}</div>
-                            </td>
-                            {% else %}
-                        <tr>
-                    {% endif %}
-                <td class="agenda-time">
-                    {{ item.start_time | date:"H:i" }} - {{ item.end_time | date:"H:i" }}
-                </td>
-                <td class="agenda-events">
-                    <div class="agenda-event">
-                        {{ item.title }}
-                    </div>
-                </td>
-                <td>
-                    <div class="" agenda-event
-                    ">
-                    {{ item.location }}
-                    </div>
+                        {% ifchanged item.start_date %}
+                                <td class="agenda-date" class="active" rowspan="{{ group.list|length }}">
+                                    <div class="dayofmonth">{{ item.start_date | date:"d" }}</div>
+                                    <div class="dayofweek">{{ item.start_date | date:"l" }}</div>
+                                    <div class="shortdate text-muted">{{ item.start_date | date:"F" }}, {{ item.start_date | date:"Y" }}</div>
+                                </td>
+                        {% endifchanged %}
+                         <td class="agenda-time">
+                            {{ item.start_time | date:"H:i" }} - {{ item.end_time | date:"H:i" }}
+                        </td>
+                        <td class="agenda-events">
+                        <div class="agenda-event">
+                            {{ item.title }}
+                        </div>
                     </td>
                     <td>
-                        <div class="agenda-event">
-                        {{ item.session_description | safe }}
-                    </div>
-                    </td>
-                    {% if item.show_ical_download %}
-                        <td>
-                            <a href="{% url 'agenda_ics_export' item.id %}">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </a>
+                        <div class="" agenda-event
+                        ">
+                        {{ item.location }}
+                        </div>
                         </td>
-                    {% endif %}
-                    </tr>
+                        <td>
+                            <div class="agenda-event">
+                            {{ item.session_description | safe }}
+                        </div>
+                        </td>
+                        {% if item.show_ical_download %}
+                            <td>
+                                <a href="{% url 'agenda_ics_export' item.id %}">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </a>
+                            </td>
+                        {% endif %}
+                        </tr>
+                    {% endfor %}
                 {% endfor %}
     </tbody>
     </table>
